# imgwire-python

./: .gitignore  AGENTS.md  CODEGEN_VERSION  Makefile  README.md  context7.json  package.json  pyproject.toml  tsconfig.json
.github/workflows/: ci.yml  release.yml
docs/: imgwire-url-transformations-guide.md  spec.md
imgwire/: __init__.py
imgwire/client/: __init__.py  core.py  options.py
imgwire/images/: __init__.py  url_builder.py
imgwire/pagination/: __init__.py  iterators.py  models.py
imgwire/resources/: __init__.py  base.py  cors_origins.py  custom_domain.py  images.py  metrics.py
imgwire/uploads/: __init__.py  resolve.py  types.py  upload.py
openapi/: .sdk.openapi.generator.json  raw.openapi.json  sdk.openapi.json
scripts/: postprocess.ts  release.mjs  verify-generated.ts
scripts/_lib/: codegen-version.ts  generate.ts
tests/: test_client.py  test_image_url_builder.py  test_images_resource.py  test_pagination.py  test_uploads.py
