[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "imgwire"
version = "0.2.0"
description = "Python server-side SDK for the imgwire API."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "imgwire" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "httpx>=0.27,<1",
  "pydantic>=2.9,<3",
  "python-dateutil>=2.9,<3",
  "typing-extensions>=4.12,<5",
  "urllib3>=2.2,<3"
]

[project.optional-dependencies]
dev = ["build>=1.2,<2", "ruff>=0.11,<0.12"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["imgwire*", "generated*"]

[tool.setuptools.package-data]
imgwire = ["py.typed"]
"generated.imgwire_generated" = ["py.typed"]

[tool.ruff]
line-length = 88
target-version = "py39"
extend-exclude = ["generated"]
